--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "lib": ["esnext", "DOM"]
+    "typeRoots": ["node_modules/@types", "src/types"] ,
+    "lib": ["esnext", "DOM"] , 
+    "resolveJsonModule": true ,
   }
 }
