--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "typeRoots": ["node_modules/@types", "src/types"] ,
-    "lib": ["esnext", "DOM"] , 
-    "resolveJsonModule": true ,
+    "typeRoots": ["node_modules/@types", "src/types"],
+    "lib": ["esnext", "DOM"],
+    "resolveJsonModule": true
   }
 }
