--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
+    "module": "ES2022" /* es6 */,
+    "target": "ES2017" /* es5 */,
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
     "typeRoots": ["node_modules/@types", "src/types"],
     "lib": ["esnext", "DOM"],
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strictNullChecks": true
   }
 }
