--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-loader": "^6.2.0",
     "git": "^0.1.5",
     "html-webpack-plugin": "^5.5.1",
+    "json-loader": "^0.5.7",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
